--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>React FTW!</title>
+  <title>External APIs are fun!</title>
 </head>
 <body>
   <div id="app"></div>
